--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WaterData</title>
+        <title>WaterDataLog</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>WaterData</h1>
+        <h1>WaterDataLog</h1>
 
         <!--<img src="logo.png" alt=""> -->
 
